# pybind11_sandbox

./: .editorconfig  .gitignore  CMakeLists.txt  _clang-format  conanfile.txt
python/: hello.py  tests_mylib.py
scripts/: build_linux_clang.sh  generate_vs2019.bat
src/lib/: CMakeLists.txt  mylib.cpp  mylib.h
